--- a/Produtos/produtos.html
+++ b/Produtos/produtos.html
@@ -47,5 +47,10 @@
                 </li>
             </ul>
         </main>
+
+        <footer>
+            <img src="./imagens/logo-branco.png">
+            <p class="copyright">&copy; Copyrigth Barbearia Alura - 2020</p>
+        </footer>
     </body>
 </html>
