--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
         <title>Barbearia Alura</title>
 
-        <link rel="stylesheet" href="./Index/style.css">
+        <link rel="stylesheet" href="./Index/style-home.css">
     </head>
 
     <body>
@@ -15,7 +15,7 @@
             <h1 class="titulo-principal">Barbearia Alura</h1>
         </header>
 
-        <img id="banner" src="./Index/banner.jpg">
+        <img id="banner" src="./imagens/banner.jpg">
 
         <div class="principal">
             <h2 class="titulo-centralizado">Sobre a Barbearia Alura</h2>
@@ -42,7 +42,7 @@
                 <li class="itens">Profissionais Qualificados</li>
             </ul>
 
-            <img src="./Index/beneficios.jpg" class="imagem-beneficios">
+            <img src="./imagens/beneficios.jpg" class="imagem-beneficios">
      </div>
     </body>
 
