--- a/Contato/contato.html
+++ b/Contato/contato.html
@@ -13,13 +13,13 @@
     <body>
         <header>
             <div class="caixa">
-                <h1><img src="../imagens/logo.png"></h1>
+                <h1><img src="../imagens/logo.png" alt="Logo da Barbearia"></h1>
 
                 <nav>
                     <ul>
                         <li><a href="../index.html">Home</a></li>
-                        <li><a href="./produtos.html">Produtos</a></li>
-                        <li><a href="../contato.html">Contato</a></li>
+                        <li><a href="../Produtos/produtos.html">Produtos</a></li>
+                        <li><a href="./contato.html">Contato</a></li>
                     </ul>
                 </nav>
              </div>
@@ -28,45 +28,67 @@
         <main>
             <form>
                 <label for="nomesobrenome">Nome e sobrenome</label>
-                <input type="text" id="nomesobrenome" class="input-padrao">
+                <input type="text" id="nomesobrenome" class="input-padrao" required>
 
                 <label for="email">Email</label>
-                <input type="text" id="email" class="input-padrao">
+                <input type="email" id="email" class="input-padrao" required placeholder="seuemail@dominio.com">
 
                 <label for="telefone">Telefone</label>
-                <input type="text" id="telefone" class="input-padrao">
+                <input type="tel" id="telefone" class="input-padrao" required placeholder="(XX) XXXXX-XXXX">
 
-                <div>
-                    <label for="mensagem">Mensagem</label>
-                    <textarea cols="70" rows="10" id="mensagem" class="input-padrao"></textarea>
+                <label for="mensagem">Mensagem</label>
+                    <textarea cols="70" rows="10" id="mensagem" class="input-padrao" required></textarea>
 
-                    <p>Como prefere o nosso contato?</p>
+                <fieldset>
+                    <legend>Como prefere o nosso contato?</legend>
 
                     <label for="radio-email"><input type="radio" name="contato" value="email" id="radio-email">Email</label>
                     
                     <label for="radio-telefone"><input type="radio" name="contato" value="telefone" id="radio-telefone">Telefone</label>
 
-                    <label for="radio-whatsapp"><input type="radio" name="contato" value="whatsapp" id="radio-whatsapp">WhatsApp</label>
-                </div>
+                    <label for="radio-whatsapp"><input type="radio" name="contato" value="whatsapp" id="radio-whatsapp" checked>WhatsApp</label>
+                </fieldset>
 
-                <div>
-                    <p>Qual horário prefere ser atendido?</p>
+                <fieldset>
+                    <legend>Qual horário prefere ser atendido?</legend>
 
                     <select>
                         <option>Manhã</option>
                         <option>Tarde</option>
                         <option>Noite</option>
-                    </select>
+                    </select> 
+                </fieldset>
 
-                    <label class="checkbox"><input type="checkbox">Gostaria de receber nossas novidades por email?</label>
+                <label class="checkbox"><input type="checkbox" checked>Gostaria de receber nossas novidades por email?</label>
 
-                    <input type="submit" value="Enviar formulário">
-                </div>
+                <input type="submit" value="Enviar formulário" class="enviar">
             </form>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Dia</th>
+                        <th>Horário</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Segunda</td>
+                        <td>8h ~ 20h</td>
+                    </tr>
+                    <tr>
+                        <td>Quarta</td>
+                        <td>8h ~ 20h</td>
+                    </tr>
+                    <tr>
+                        <td>Sexta</td>
+                        <td>8h ~ 20h</td>
+                    </tr>
+                </tbody>
+            </table>
         </main>
 
         <footer>
-            <img src="../imagens/logo-branco.png">
+            <img src="../imagens/logo-branco.png" alt="Logo da Barbearia">
             <p class="copyright">&copy; Copyrigth Barbearia Alura - 2020</p>
         </footer>
     </body>
