--- a/Contato/contato.html
+++ b/Contato/contato.html
@@ -6,7 +6,7 @@
 
         <title>Contato - Barbearia Alura</title>
 
-        <link rel="stylesheet" href="reset.css">
+        <link rel="stylesheet" href="../Produtos/reset.css">
         <link rel="stylesheet" href="../Produtos/style.css">
     </head>
 
