--- a/index.html
+++ b/index.html
@@ -51,7 +51,9 @@
                 <h3 class="titulo-principal">Nosso estabelecimento</h3>
                 <p>Nosso estabelecimento está localizado no coração da cidade.</p>
 
+                <div class="mapa-conteudo">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3603.0766860800845!2d-49.262656288843914!3d-25.435699613720313!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94dce442e1d9bb63%3A0x7c19c172d6967407!2sRebou%C3%A7as%2C%20Curitiba%20-%20PR%2C%2082590-300!5e0!3m2!1spt-BR!2sbr!4v1589828203699!5m2!1spt-BR!2sbr" width="100%" height="300" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+                </div>
             </section>
 
             <section class="beneficios">
