--- a/Contato/contato.html
+++ b/Contato/contato.html
@@ -8,6 +8,8 @@
 
         <link rel="stylesheet" href="../Produtos/reset.css">
         <link rel="stylesheet" href="../Produtos/style.css">
+        <link rel="stylesheet" href="https://indestructibletype.com/fonts/Jost.css" type="text/css" charset="utf-8"/>
+
     </head>
 
     <body>
@@ -25,7 +27,7 @@
              </div>
         </header>
 
-        <main>
+        <main class="form-main">
             <form>
                 <label for="nomesobrenome">Nome e sobrenome</label>
                 <input type="text" id="nomesobrenome" class="input-padrao" required>
