--- a/Produtos/produtos.html
+++ b/Produtos/produtos.html
@@ -8,6 +8,9 @@
 
         <link rel="stylesheet" href="reset.css">
         <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="https://indestructibletype.com/fonts/Jost.css" type="text/css" charset="utf-8"/>
+
+        
     </head>
 
     <body>
